grammar.js
    source_file: $ => seq(repeat(seq($.declaration, $._separator)), optional($.declaration)),

    block: $ => prec(2, seq(
      '{',
      sep(seq(optional($.tag), $.statement), $._separator),
      '}',
    )),

    declaration_block: $ => seq(
      '{',
      sep($.declaration, $._separator),
      '}',
    ),

    build_tag: $ => seq('#+', /.+/),

    package_declaration: $ => seq('package', field('name', $.identifier)),

    import_declaration: $ => seq(
      optional($.attributes),
      optional('foreign'),
      'import',
      optional(field('alias', $.identifier)),
      choice(
        field('path', $.string),
        seq(
          '{',
          commaSep1(field('path', choice($.string, $.identifier))),
          optional(','),
          '}',
        ),
      ),
    ),

    procedure_declaration: $ => seq(
      optional($.attributes),
      field('name', $.identifier),
      '::',
      optional(field('tag', $.tag)),
      field('value', $.procedure),
    ),

    procedure: $ => prec.right(1, seq(
      field('signature', $.procedure_signature),
      optional(field('body', choice($.block, $.uninitialized))),
    )),

    procedure_signature: $ => prec.right(seq(
      'proc',
      optional(field('calling_convention', $.calling_convention)),
      field('parameters', $.parameters),
      optional(seq(
        '->',
        optional(field('tag', $.tag)),
        field('result', $.type),
        optional(field('tag', $.tag)),
      )),
      optional(field('constraints', $.where_clause)),
      optional(field('tag', $.tag)),
    )),

    where_clause: $ => prec.right(seq('where', commaSep1(prec.right($.expression)))),

    calling_convention: _ => choice(
      '"odin"',
      '"contextless"',
      '"stdcall"',
      '"std"',
      '"cdecl"',
      '"c"',
      '"fastcall"',
      '"fast"',
      '"none"',
      '"system"',
    ),

    overloaded_procedure_declaration: $ => seq(
      optional($.attributes),
      field('name', $.identifier),
      '::',
      'proc',
      '{',
      optional(seq(
        commaSep1(field('value', $.expression)),
        optional(','),
      )),
      '}',
    ),

    struct_declaration: $ => seq(
      optional($.attributes),
      field('name', $.identifier),
      '::',
      'struct',
      optional(field('parameters', $.polymorphic_parameters)),
      repeat(seq(field('tag', $.tag), optional(choice($.identifier, $.number)))), // #align 16
      optional(field('constraints', $.where_clause)),
      '{',
      optional(seq(
        commaSep1(field('member', $.field)),
        optional(','),
      )),
      '}',
    ),

    enum_declaration: $ => seq(
      optional($.attributes),
      optional('using'),
      field('name', $.identifier),
      '::',
      'enum',
      optional(field('type', $.type)),
      '{',
      optional(seq(
        commaSep1(field('member', $.enum_member)),
        optional(','),
      )),
      '}',
    ),

    enum_member: $ => seq(
      field('name', $.identifier),
      optional(seq('=', field('value', $.expression))),
    ),

    union_declaration: $ => seq(
      optional($.attributes),
      field('name', $.identifier),
      '::',
      'union',
      optional(field('parameters', $.polymorphic_parameters)),
      optional(field('tag', $.tag)),
      '{',
      optional(seq(
        commaSep1(field('member', $.type)),
        optional(','),
      )),
      '}',
    ),

    bit_field_declaration: $ => seq(
      optional($.attributes),
      field('name', $.identifier),
      '::',
      'bit_field',
      field('type', $.type),
      '{',
      optional(seq(
        commaSep1(field('member', $.bit_field_member)),
        optional(','),
      )),
      '}',
    ),

    bit_field_member: $ => seq(
      field('name', $.identifier),
      ':',
      field('type', $.type),
      '|',
      field('width', $.expression),
    ),

    variable_declaration: $ => seq(
      optional($.attributes),
      commaSep1(field('name', $.identifier)),
      ':=',
      optional($.tag),
      commaSep1(field('value', choice($.expression, $.procedure))),
      optional(','),
    ),

    const_declaration: $ => seq(
      optional($.attributes),
      commaSep1(field('name', $.identifier)),
      '::',
      optional(field('tag', $.tag)),
      commaSep1(
        choice(
          field('value', $.expression),
          seq(alias('#type', $.tag), field('value', $.type)),
          field('value', $.bit_set_type),
        ),
      ),
    ),

    const_type_declaration: $ => prec(1, seq(
      optional($.attributes),
      field('name', $.identifier),
      ':',
      field('type', $.type),
      ':',
      field('value', $.expression),
    )),

    foreign_block: $ => seq(
      optional($.attributes),
      'foreign',
      optional(field('name', $.identifier)),
      field('body', $.declaration_block),
    ),

    foreign_statement: $ => seq(
      optional($.attributes),
      'foreign',
      optional(field('name', $.identifier)),
      field('body', $.block),
    ),

    attributes: $ => repeat1($.attribute),

    attribute: $ => seq(
      '@',
      choice(
        $.identifier,
        seq(
          '(',
          commaSep1(seq($.identifier, optional(seq('=', $.expression)))),
          ')',
        ),
      ),
    ),

    parameters: $ => seq(
      '(',
      optional(seq(
        commaSep1(choice($.parameter, $.default_parameter)),
        optional(','),
      )),
      ')',
    ),
    parameter: $ => prec.right(choice(
      prec.dynamic(1, seq(
        commaSep1($._param_name),
        $._param_type,
      )),
      prec.dynamic(-1, seq(
        optional(field('tag', $.tag)),
        optional('using'),
        field('type', $.type),
      )),
    )),
    _param_name: $ => seq(
      optional(field('tag', $.tag)),
      optional('using'),
      optional('$'),
      field('name', $.identifier),
    ),
    _param_type: $ => seq(
      ':',
      optional(field('tag', $.tag)),
      field('type', $.type),
      optional($.identifier),
      optional(seq('=', field('value', $.expression))),
    ),


    default_parameter: $ => seq(
      optional(field('tag', $.tag)),
      optional('using'),
      field('name', $.identifier),
      ':=',
      field('value', $.expression),
    ),

    polymorphic_parameters: $ => seq(
      '(',
      commaSep1(seq(
        commaSep1(seq(optional('$'), field('name', $.identifier))),
        ':',
        field('type', $.type),
      )),
      ')',
    ),

    field: $ => prec.right(seq(
      commaSep1(seq(optional(field('tag', $.tag)), optional('using'), field('name', $.identifier))),
      ':',
      optional(field('tag', $.tag)),
      field('type', $.type),
      optional(field('tag', $.string)),
    )),

    assignment_statement: $ => prec(PREC.ASSIGNMENT, seq(
      optional(seq($.attributes, optional($.tag))),
      commaSep1(field('left', $.expression)),
      field('operator', '='),
      optional($.tag),
      commaSep1(field('right', choice($.expression, $.procedure))),
    )),

    update_statement: $ => seq(
      commaSep1(field('left', $.expression)),
      field('operator', choice('+=', '-=', '*=', '/=', '%=', '&=', '|=', '^=', '<<=', '>>=', '||=', '&&=', '&~=')),
      commaSep1(field('right', $.expression)),
    ),

    when_statement: $ => prec.right(seq(
      'when',
      $.expression,
      choice($.block, seq('do', $.statement)),
      repeat($.else_when_clause),
      optional($.else_clause),
    )),

    conditional_declaration: $ => prec.right(seq(
      'when',
      $.expression,
      $.declaration_block,
      repeat($.else_when_declaration_clause),
      optional($.else_declaration_clause),
    )),

    else_when_declaration_clause: $ => seq(
      'else',
      'when',
      $.expression,
      $.declaration_block,
    ),

    else_declaration_clause: $ => seq(
      'else',
      $.declaration_block,
    ),

    var_declaration: $ => prec.right(seq(
      optional($.attributes),
      commaSep1(field('name', $.identifier)),
      ':',
      optional(field('tag', $.tag)),
      choice(
        seq(
          field('type', $.type),
          optional(seq(choice('=', ':'), commaSep1(field('value', $.expression)))),
        ),
        // seq('=', $.expression), // +2k state count no ty
      ),
    )),

    return_statement: $ => prec.right(1, seq(
      'return',
      optional($.tag),
      optional(seq(
        commaExternalSep1(choice($.expression, $.procedure, $._procedure_type), $),
        optional(','),
      )),
    )),

    _expression_no_tag: $ => choice($._expression_no_in, $.in_expression),

    binary_expression: $ => {
      const table = [
        ['||', PREC.LOGICAL_OR],
        ['or_else', PREC.LOGICAL_OR],
        ['&&', PREC.LOGICAL_AND],
        ['>', PREC.COMPARE],
        ['>=', PREC.COMPARE],
        ['<=', PREC.COMPARE],
        ['<', PREC.COMPARE],
        ['==', PREC.EQUALITY],
        ['!=', PREC.EQUALITY],
        ['~=', PREC.EQUALITY],
        ['|', PREC.BITWISE_OR],
        ['~', PREC.BITWISE_XOR],
        ['&', PREC.BITWISE_AND],
        ['&~', PREC.BITWISE_AND_NOT],
        ['<<', PREC.SHIFT],
        ['>>', PREC.SHIFT],
        ['+', PREC.ADD],
        ['-', PREC.ADD],
        ['*', PREC.MULTIPLY],
        ['/', PREC.MULTIPLY],
        ['%', PREC.MULTIPLY],
        ['%%', PREC.MULTIPLY],
      ];

      return choice(...table.map(([operator, precedence]) => {
        return prec.left(precedence, seq(
          field('left', $.expression),
          // @ts-ignore
          field('operator', operator),
          field('right', $.expression),
        ));
      }));
    },

    ternary_expression: $ => prec.right(seq(
      field('condition', choice($._expression_no_tag, $.struct)),
      choice(
        prec(PREC.TERNARY, seq(
          '?',
          field('consequence', $.expression),
          ':',
          field('alternative', $.expression),
        )),
        seq(
          choice('if', 'when'),
          field('consequence', $.expression),
          'else',
          field('alternative', $.expression),
        ),
      ),
    )),

    call_expression: $ => prec.left(PREC.CALL, seq(
      field('function', choice(seq($.tag, $.identifier), $._expression_no_tag, $.tag)),
      $._call_arguments,
    )),

    _call_arguments: $ => prec.left(PREC.CALL, seq(
      '(',
      optional(seq(
        commaSep1(seq(
          field('argument', choice($.expression, $.struct_type, $.procedure)),
          optional(seq('=', choice($.expression))),
        )),
        optional(','),
      )),
      ')',
    )),

    member_expression: $ => prec.left(PREC.MEMBER, seq(
      optional(field('operand', $.expression)),
      '.',
      field('field', $.identifier),
    )),

    index_expression: $ => prec.left(PREC.MEMBER, seq(
      field('operand', $.expression),
      '[',
      field('index', $.expression),
      optional(seq(',', field('index', $.expression))),
      ']',
    )),

    slice_expression: $ => prec.left(PREC.MEMBER, seq(
      field('operand', $.expression),
      '[',
      optional(field('start', $.expression)),
      ':',
      optional(field('end', $.expression)),
      ']',
    )),

    range_expression: $ => prec.left(PREC.MEMBER, seq(
      field('start', $.expression),
      field('operator', choice('..=', '..<')),
      field('end', $.expression),
    )),

    cast_expression: $ => prec.left(PREC.CAST, seq(
      choice(
        seq(
          '(',
          field('type', choice($.pointer_type, $.array_type, $._procedure_type)),
          ')',
          optional(field('operand', $.expression)),
        ),
        seq(
          field('operator', choice('cast', 'transmute')),
          '(',
          field('type', $.type),
          ')',
          field('operand', $.expression),
        ),
        seq(field('operator', 'auto_cast'), field('operand', $.expression)),
      ),
    )),

    type: $ => prec.right(typeChoice($)),

    pointer_type: $ => prec.left(seq('^', $.type)),

    tuple_type: $ => seq(
      '(',
      optional(seq(
        choice(
          $._unnamed_tuple_types,
          $._named_tuple_types,
        ),
      )),
      ')',
    ),

    _unnamed_tuple_types: $ => seq(
      alias($._tuple_element_type, $.type),
      optional(seq(',', optional($._unnamed_tuple_types))),
    ),

    _named_tuple_types: $ => seq(
      choice($.named_type, $.default_type),
      optional(seq(',', optional($._named_tuple_types))),
    ),

    struct_type: $ => prec(1, seq(
      'struct',
      optional($.polymorphic_parameters),
      repeat(seq($.tag, optional($.number))), // #align 16
      repeat1(seq(
        '{',
        optional($._struct_members),
        '}',
      )),
    )),

    _struct_members: $ => seq(
      commaSep1(field('member', $.struct_member)),
      optional(','),
    ),

    struct_member: $ => seq(
      commaSep1(seq(optional('using'), field('name', $.identifier))),
      ':',
      optional(field('tag', $.tag)),
      field('type', $.type),
      optional(field('tag', $.string)),

    ),

    enum_type: $ => seq(
      'enum',
      optional(field('underlying_type', $.type)),
      '{',
      commaSep1(field('member', $.enum_member)),
      optional(','),
      '}',
    ),

    bit_field_type: $ => seq(
      'bit_field',
      field('type', $.type),
      '{',
      commaSep1(field('member', $.bit_field_member)),
      optional(','),
      '}',
    ),

    named_type: $ => prec.dynamic(1, seq(
      $._named_type_names,
      ':',
      $.type,
      optional(prec(1, seq('=', $.literal))),
    )),

    _named_type_names: $ => commaSep1($.identifier),

    _procedure_type: $ => alias($.procedure_signature, $.procedure_type),

    number: _ => {
      const decimal = /[0-9][0-9_]*[ijk]?/;
      const hex = /0[xh][0-9a-fA-F_]+[ijk]?/;
      const octal = /0o[0-7][0-7]*[ijk]?/;
      const binary = /0b[01][01_]*[ijk]?/;
      // no float

      return token(choice(
        seq(optional('-'), decimal),
        seq(optional('-'), hex),
        seq(optional('-'), octal),
        seq(optional('-'), binary),
      ));
    },

    string: $ => choice($._string_literal, $._raw_string_literal),

    _string_literal: $ => seq(
      '"',
      repeat(choice(
        $.string_content,
        $.escape_sequence,
      )),
      '"',
    ),

    _raw_string_literal: $ => seq(
      '`',
      repeat(alias($._raw_string_content, $.string_content)),
      '`',
    ),

    string_content: _ => token.immediate(prec(1, /[^"\\]+/)),

    boolean: _ => choice('true', 'false'),

    uninitialized: _ => '---',

    tag: _ => token(seq(/#[a-zA-Z_][a-zA-Z0-9_]*/, optional(seq('(', /\w*/, ')')))),

    identifier: _ => /[_\p{XID_Start}][_\p{XID_Continue}]*/u,

    _separator: $ => choice(
      $._newline,
      ';',
    ),
