test/corpus/declarations.txt
====================
Bit field type
====================

Foo :: bit_field u16 { // backing type must be an integer or array of integers
    x: i32     | 3, // signed integers will be signed extended on use
    y: u16     | 2 + 3, // general expressions
    z: My_Enum | foo.SOME_CONSTANT, // ability to define the bit-width elsewhere
    w: bool    | foo.SOME_CONSTANT > 10 ? 2 : 1,
}

Handle :: bit_field u32 {
    slot:       u32  | 16,
    generation: u32  | 15,
    in_use:     bool |  1,
}

---

(source_file
  (bit_field_declaration
    name: (identifier)
    type: (type
      (identifier))
    (comment)
    member: (bit_field_member
      name: (identifier)
      type: (type
        (identifier))
      width: (number))
    (comment)
    member: (bit_field_member
      name: (identifier)
      type: (type
        (identifier))
      width: (binary_expression
        left: (number)
        right: (number)))
    (comment)
    member: (bit_field_member
      name: (identifier)
      type: (type
        (identifier))
      width: (member_expression
        operand: (identifier)
        field: (identifier)))
    (comment)
    member: (bit_field_member
      name: (identifier)
      type: (type
        (identifier))
      width: (ternary_expression
        condition: (binary_expression
          left: (member_expression
            operand: (identifier)
            field: (identifier))
          right: (number))
        consequence: (number)
        alternative: (number))))
  (bit_field_declaration
    name: (identifier)
    type: (type
      (identifier))
    member: (bit_field_member
      name: (identifier)
      type: (type
        (identifier))
      width: (number))
    member: (bit_field_member
      name: (identifier)
      type: (type
        (identifier))
      width: (number))
    member: (bit_field_member
      name: (identifier)
      type: (type
        (identifier))
      width: (number))))

====================
Build Tags
====================

#+build darwin, linux

---

(source_file
  (build_tag))
