test/corpus/semantic_members.txt
====================
Compound member and parameter fields
====================

Record :: struct {
    first, second: int,
}

Inline_Record :: #type struct {
    left, right: string,
}

State :: enum u8 {
    Ready,
    Alias = Ready,
}

Inline_State :: #type enum u16 {
    First,
    Second = First,
}

Flags :: bit_field u16 {
    enabled: bool | 1,
    copied: u8 | WIDTH,
}

Inline_Flags :: #type bit_field u8 {
    low: u8 | 2,
    high: u8 | LOW_WIDTH,
}

Container :: struct($T: typeid) {
    callback: proc(rawptr, rune) -> bool,
}

process :: proc(
    first, second: int,
    count: int = DEFAULT_COUNT,
    allocator := context.allocator,
    callback: proc(rawptr, rune) -> bool,
) {}

---

(source_file
  (struct_declaration
    name: (identifier)
    member: (field
      name: (identifier)
      name: (identifier)
      type: (type
        (identifier))))
  (const_declaration
    name: (identifier)
    (tag)
    value: (type
      (struct_type
        member: (struct_member
          name: (identifier)
          name: (identifier)
          type: (type
            (identifier))))))
  (enum_declaration
    name: (identifier)
    type: (type
      (identifier))
    member: (enum_member
      name: (identifier))
    member: (enum_member
      name: (identifier)
      value: (identifier)))
  (const_declaration
    name: (identifier)
    (tag)
    value: (type
      (enum_type
        underlying_type: (type
          (identifier))
        member: (enum_member
          name: (identifier))
        member: (enum_member
          name: (identifier)
          value: (identifier)))))
  (bit_field_declaration
    name: (identifier)
    type: (type
      (identifier))
    member: (bit_field_member
      name: (identifier)
      type: (type
        (identifier))
      width: (number))
    member: (bit_field_member
      name: (identifier)
      type: (type
        (identifier))
      width: (identifier)))
  (const_declaration
    name: (identifier)
    (tag)
    value: (type
      (bit_field_type
        type: (type
          (identifier))
        member: (bit_field_member
          name: (identifier)
          type: (type
            (identifier))
          width: (number))
        member: (bit_field_member
          name: (identifier)
          type: (type
            (identifier))
          width: (identifier)))))
  (struct_declaration
    name: (identifier)
    parameters: (polymorphic_parameters
      name: (identifier)
      type: (type
        (identifier)))
    member: (field
      name: (identifier)
      type: (type
        (procedure_type
          parameters: (parameters
            (parameter
              type: (type
                (identifier)))
            (parameter
              type: (type
                (identifier))))
          result: (type
            (identifier))))))
  (procedure_declaration
    name: (identifier)
    value: (procedure
      signature: (procedure_signature
        parameters: (parameters
          (parameter
            name: (identifier)
            name: (identifier)
            type: (type
              (identifier)))
          (parameter
            name: (identifier)
            type: (type
              (identifier))
            value: (identifier))
          (default_parameter
            name: (identifier)
            value: (member_expression
              operand: (identifier)
              field: (identifier)))
          (parameter
            name: (identifier)
            type: (type
              (procedure_type
                parameters: (parameters
                  (parameter
                    type: (type
                      (identifier)))
                  (parameter
                    type: (type
                      (identifier))))
                result: (type
                  (identifier)))))))
      body: (block))))

====================
Common search operand fields
====================

exercise :: proc() {
    target, other = source, target
    target += increment
    selected := object.member
    indexed := items[index]
    cell := grid[row, column]
    window := items[start:end]
    inclusive := start..=end
    exclusive := start..<end
    converted := cast(int) source
    transmuted := transmute(f32) source
    automatic := auto_cast source
    pointer := (^Thing)source
}

---

(source_file
  (procedure_declaration
    name: (identifier)
    value: (procedure
      signature: (procedure_signature
        parameters: (parameters))
      body: (block
        (assignment_statement
          left: (identifier)
          left: (identifier)
          right: (identifier)
          right: (identifier))
        (update_statement
          left: (identifier)
          right: (identifier))
        (variable_declaration
          name: (identifier)
          value: (member_expression
            operand: (identifier)
            field: (identifier)))
        (variable_declaration
          name: (identifier)
          value: (index_expression
            operand: (identifier)
            index: (identifier)))
        (variable_declaration
          name: (identifier)
          value: (index_expression
            operand: (identifier)
            index: (identifier)
            index: (identifier)))
        (variable_declaration
          name: (identifier)
          value: (slice_expression
            operand: (identifier)
            start: (identifier)
            end: (identifier)))
        (variable_declaration
          name: (identifier)
          value: (range_expression
            start: (identifier)
            end: (identifier)))
        (variable_declaration
          name: (identifier)
          value: (range_expression
            start: (identifier)
            end: (identifier)))
        (variable_declaration
          name: (identifier)
          value: (cast_expression
            type: (type
              (identifier))
            operand: (identifier)))
        (variable_declaration
          name: (identifier)
          value: (cast_expression
            type: (type
              (identifier))
            operand: (identifier)))
        (variable_declaration
          name: (identifier)
          value: (cast_expression
            operand: (identifier)))
        (variable_declaration
          name: (identifier)
          value: (cast_expression
            type: (pointer_type
              (type
                (identifier)))
            operand: (identifier)))))))
